--- a/Playwright/DataConfigHrEmployee.json
+++ b/Playwright/DataConfigHrEmployee.json
@@ -168,5 +168,10 @@
         }
       }
     ]
+  },
+  "eloDeleteData": {
+    "arcPaths": [
+      "ARCPATH:/Personalmanagement/Personalakten/H/Hansen, Hans"
+    ]
   }
 }
