--- a/Playwright/DataConfigHrEmployee.json
+++ b/Playwright/DataConfigHrEmployee.json
@@ -84,7 +84,51 @@
                 "checkValue": true
               }
             ],
-            "tables": []
+            "tables": [],
+            "expectedValueControls": [
+              {
+                "selector": "IX_GRP_HR_PERSONNEL_FIRSTNAME",
+                "value": "Hans",
+                "type": "TEXT",
+                "checkValue": true
+              },
+              {
+                "selector": "IX_GRP_HR_PERSONNEL_LASTNAME",
+                "value": "Hansen",
+                "type": "TEXT",
+                "checkValue": true
+              },
+              {
+                "selector": "IX_GRP_HR_PERSONNEL_PERSONNELNO",
+                "value": "12345",
+                "type": "TEXT",
+                "checkValue": true
+              },
+              {
+                "selector": "IX_GRP_HR_PERSONNEL_ELOUSERID",
+                "value": "Jan Eichner",
+                "type": "DYNKWL",
+                "checkValue": true
+              },
+              {
+                "selector": "IX_GRP_HR_PERSONNEL_RESPONSIBLE",
+                "value": "Bodo Kraft",
+                "type": "DYNKWL",
+                "checkValue": true
+              },
+              {
+                "selector": "IX_GRP_HR_PERSONNEL_SUPERIOR",
+                "value": "Gerd Baum",
+                "type": "DYNKWL",
+                "checkValue": true
+              },
+              {
+                "selector": "IX_GRP_HR_PERSONNEL_DATEOFJOINING",
+                "value": "01.01.2022",
+                "type": "TEXT",
+                "checkValue": true
+              }
+            ]
           }
         }
       },
@@ -123,6 +167,12 @@
                 "table": [
                   [
                     {
+                      "selector": "IX_MAP_HR_PERSONNEL_FAMILYMEMBER_TYPE",
+                      "value": "Ehepartner",
+                      "type": "KWL",
+                      "checkValue": true
+                    },
+                    {
                       "selector": "IX_MAP_HR_PERSONNEL_FAMILYMEMBER_FIRSTNAME",
                       "value": "Hugo",
                       "type": "TEXT",
@@ -136,6 +186,12 @@
                     }
                   ],
                   [
+                    {
+                      "selector": "IX_MAP_HR_PERSONNEL_FAMILYMEMBER_TYPE",
+                      "value": "Ehepartner",
+                      "type": "KWL",
+                      "checkValue": true
+                    },
                     {
                       "selector": "IX_MAP_HR_PERSONNEL_FAMILYMEMBER_FIRSTNAME",
                       "value": "Sandra",
@@ -184,6 +240,32 @@
                     }
                   ]
                 ]
+              }
+            ],
+            "expectedValueControls": [
+              {
+                "selector": "IX_MAP_HR_PERSONNEL_EMERGENCYCONTACT_FIRSTNAME2",
+                "value": "Sebastian",
+                "type": "TEXT",
+                "checkValue": true
+              },
+              {
+                "selector": "IX_MAP_HR_PERSONNEL_EMERGENCYCONTACT_LASTNAME2",
+                "value": "Schulz",
+                "type": "TEXT",
+                "checkValue": true
+              },
+              {
+                "selector": "IX_MAP_HR_PERSONNEL_TITLE",
+                "value": "Doktor H",
+                "type": "TEXT",
+                "checkValue": true
+              },
+              {
+                "selector": "IX_GRP_HR_PERSONNEL_GENDER",
+                "value": "M - Männlich",
+                "type": "KWL",
+                "checkValue": true
               }
             ]
           }
