Playwright/DataConfigCreateFilesAmelie.json

--- a/Playwright/DataConfigCreateFilesAmelie.json
+++ b/Playwright/DataConfigCreateFilesAmelie.json
@@ -624,7 +624,7 @@
               },
               {
                 "selector": "IX_GRP_HR_PERSONNEL_RESPONSIBLE",
-                "value": "Bodo Kraft",
+                "value": "Ute Schenk",
                 "type": "DYNKWL"
               }
             ],
