--- a/Playwright/DataConfigFirstdayOfWorkReminder.json
+++ b/Playwright/DataConfigFirstdayOfWorkReminder.json
@@ -34,20 +34,22 @@
           "selectorMenu": "",
           "selectorButton": ""
         },
-        "tabPages": {
-          "Personal": {
+        "tabPages": [
+          {
+            "tabName": "Personal",
             "initTabPage": [],
             "controls": [],
             "tables": [],
-            "expectedValueControls": [
+            "checkValueControls": [
               {
                 "selector": "IX_GRP_HR_PERSONNEL_PERSONNELSTATUS",
                 "value": "E - Angestellt",
-                "type": "KWL"
+                "type": "KWL",
+                "operator": "EQUAL"
               }
             ]
           }
-        }
+        ]
       }
     ]
   },
