--- a/Playwright/DataConfigHrEmployee.json
+++ b/Playwright/DataConfigHrEmployee.json
@@ -34,8 +34,9 @@
           "selectorMenu": "Personal",
           "selectorButton": "Neuer Mitarbeiter"
         },
-        "tabPages": {
-          "": {
+        "tabPages": [
+          {
+            "tabName": "",
             "initTabPage": [],
             "controls": [
               {
@@ -75,45 +76,52 @@
               }
             ],
             "tables": [],
-            "expectedValueControls": [
+            "checkValueControls": [
               {
                 "selector": "IX_GRP_HR_PERSONNEL_FIRSTNAME",
                 "value": "Hans",
-                "type": "TEXT"
+                "type": "TEXT",
+                "operator": "EQUAL"
               },
               {
                 "selector": "IX_GRP_HR_PERSONNEL_LASTNAME",
                 "value": "Hansen",
-                "type": "TEXT"
+                "type": "TEXT",
+                "operator": "EQUAL"
               },
               {
                 "selector": "IX_GRP_HR_PERSONNEL_PERSONNELNO",
                 "value": "12345",
-                "type": "TEXT"
+                "type": "TEXT",
+                "operator": "EQUAL"
               },
               {
                 "selector": "IX_GRP_HR_PERSONNEL_ELOUSERID",
                 "value": "Jan Eichner",
-                "type": "DYNKWL"
+                "type": "DYNKWL",
+                "operator": "EQUAL"
               },
               {
                 "selector": "IX_GRP_HR_PERSONNEL_RESPONSIBLE",
                 "value": "Bodo Kraft",
-                "type": "DYNKWL"
+                "type": "DYNKWL",
+                "operator": "EQUAL"
               },
               {
                 "selector": "IX_GRP_HR_PERSONNEL_SUPERIOR",
                 "value": "Gerd Baum",
-                "type": "DYNKWL"
+                "type": "DYNKWL",
+                "operator": "EQUAL"
               },
               {
                 "selector": "IX_GRP_HR_PERSONNEL_DATEOFJOINING",
                 "value": "01.01.2022",
-                "type": "TEXT"
+                "type": "TEXT",
+                "operator": "EQUAL"
               }
             ]
           }
-        }
+        ]
       },
       {
         "entryPath": "Solutions/Personalmanagement/Personalakten/H/Hansen, Hans",
@@ -126,26 +134,9 @@
           "selectorMenu": "",
           "selectorButton": ""
         },
-        "tabPages": {
-          "Ein-/ Austritt": {
-            "initTabPage": [],
-            "controls": [
-              {
-                "selector": "befristet",
-                "value": "true",
-                "type": "RADIO"
-              }
-            ],
-            "tables": [],
-            "expectedValueControls": [
-              {
-                "selector": "IX_MAP_DURATION_TYPE",
-                "value": "sol.hr.form.personnelfile.fixedterm",
-                "type": "RADIO"
-              }
-            ]
-          },
-          "Persönlich": {
+        "tabPages": [
+          {
+            "tabName": "Persönlich",
             "initTabPage": [],
             "controls": [
               {
@@ -231,30 +222,54 @@
                 ]
               }
             ],
-            "expectedValueControls": [
+            "checkValueControls": [
               {
                 "selector": "IX_MAP_HR_PERSONNEL_EMERGENCYCONTACT_FIRSTNAME2",
                 "value": "Sebastian",
-                "type": "TEXT"
+                "type": "TEXT",
+                "operator": "EQUAL"
               },
               {
                 "selector": "IX_MAP_HR_PERSONNEL_EMERGENCYCONTACT_LASTNAME2",
                 "value": "Schulz",
-                "type": "TEXT"
+                "type": "TEXT",
+                "operator": "EQUAL"
               },
               {
                 "selector": "IX_MAP_HR_PERSONNEL_TITLE",
                 "value": "Doktor H",
-                "type": "TEXT"
+                "type": "TEXT",
+                "operator": "EQUAL"
               },
               {
                 "selector": "IX_GRP_HR_PERSONNEL_GENDER",
                 "value": "M - Männlich",
-                "type": "KWL"
+                "type": "KWL",
+                "operator": "EQUAL"
+              }
+            ]
+          },
+          {
+            "tabName": "Ein-/ Austritt",
+            "initTabPage": [],
+            "controls": [
+              {
+                "selector": "befristet",
+                "value": "true",
+                "type": "RADIO"
+              }
+            ],
+            "tables": [],
+            "checkValueControls": [
+              {
+                "selector": "IX_MAP_DURATION_TYPE",
+                "value": "sol.hr.form.personnelfile.fixedterm",
+                "type": "RADIO",
+                "operator": "EQUAL"
               }
             ]
           }
-        }
+        ]
       }
     ]
   },
