--- a/Playwright/DataConfigStartOffBoarding.json
+++ b/Playwright/DataConfigStartOffBoarding.json
@@ -34,8 +34,9 @@
           "selectorMenu": "Personal",
           "selectorButton": "Austrittsprozess"
         },
-        "tabPages": {
-          "": {
+        "tabPages": [
+          {
+            "tabName": "",
             "initTabPage": [],
             "controls": [
               {
@@ -50,14 +51,14 @@
               },
               {
                 "selector": "IX_BLOB_HR_PERSONNEL_TERMINATIONCOMMENT",
-                "value": "Mitarbeiterkündifung",
+                "value": "Mitarbeiterkündigung",
                 "type": "TEXT"
               }
             ],
             "tables": [],
-            "expectedValueControls": []
+            "checkValueControls": []
           }
-        }
+        ]
       },
       {
         "entryPath": "Solutions/Personalmanagement/Personalakten/H/Hansen, Hans",
@@ -70,20 +71,22 @@
           "selectorMenu": "",
           "selectorButton": ""
         },
-        "tabPages": {
-          "Personal": {
+        "tabPages": [
+          {
+            "tabName": "Personal",
             "initTabPage": [],
             "controls": [],
             "tables": [],
-            "expectedValueControls": [
+            "checkValueControls": [
               {
                 "selector": "IX_GRP_HR_PERSONNEL_PERSONNELSTATUS",
                 "value": "C - Gekündigt",
-                "type": "KWL"
+                "type": "KWL",
+                "operator": "EQUAL"
               }
             ]
           }
-        }
+        ]
       }
     ]
   },
