--- a/Playwright/DataConfigStartOnBoarding.json
+++ b/Playwright/DataConfigStartOnBoarding.json
@@ -17,6 +17,11 @@
     },
     "stack": "ruberg-hr.dev.elo"
   },
+  "eloAclData": {
+    "arcPaths": [
+      "ARCPATH:/Administration/Business Solutions/_global/Action definitions/sol.hr.personnel.StartOnboarding"
+    ]
+  },
   "eloSolutionArchiveData": {
     "selectorSolutionTile": "xpath\u003d//*[@title\u003d\"Solutions\"]",
     "selectorSolutionsFolder": "Solutions"
