Scripting/common_document/lib_sol.common_document.as.Utils.js

--- a/Scripting/common_document/PdfExport.config.json
+++ b/Scripting/common_document/PdfExport.config.json
@@ -6,7 +6,8 @@
   "contentsTemplate": "ARCPATH[(E10E1000-E100-E100-E100-E10E10E10E00)]:/Business Solutions Custom/common_document/Configuration/PDF Export Templates/Defaults/Contents",
   "graphicTemplate": "ARCPATH[(E10E1000-E100-E100-E100-E10E10E10E00)]:/Business Solutions Custom/common_document/Configuration/PDF Export Templates/Defaults/Graphic",
   "textTemplate": "ARCPATH[(E10E1000-E100-E100-E100-E10E10E10E00)]:/Business Solutions Custom/common_document/Configuration/PDF Export Templates/Defaults/Text",
-  "pdfExport": true,
+  "pdfExport": false,
+  "pdfExportLarge": false,
   "pdfA": false,
   "language": "de",
   "timeZone": "Europe/Berlin",
